tests/ui/comptime/comptime_impl.stderr
error: `#[rustc_comptime]` attribute cannot be used on trait impl blocks
  --> $DIR/comptime_impl.rs:16:1
   |
LL | #[rustc_comptime]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_comptime]` can be applied to functions and inherent impl blocks

error[E0277]: the trait bound `Bar: const Foo` is not satisfied
  --> $DIR/comptime_impl.rs:29:9
   |
LL |     Bar.foo();
   |         ^^^
   |
help: make the `impl` of trait `Foo` `const`
   |
LL | impl const Foo for Bar {
   |      +++++

error[E0277]: the trait bound `Bar: const Foo` is not satisfied
  --> $DIR/comptime_impl.rs:31:9
   |
LL |     Bar.bar();
   |         ^^^
   |
help: make the `impl` of trait `Foo` `const`
   |
LL | impl const Foo for Bar {
   |      +++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
